--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-    "extends": "airbnb-base",
+    "extends": ["airbnb-base", "plugin:react/jsx-runtime"],
     "rules": {
       "no-underscore-dangle":["error", {"allow":["_id"]}],
       "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
